# Diploma

./: ApplicationStyles.cpp  ApplicationStyles.h  CMakeLists.txt  DE_REPORTS  Demo.pro  FileLineEdit.cpp  FileLineEdit.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Options.save  OptionsManager.cpp  OptionsManager.h  VideoReader.h  пы.h
Core/: ConfigCollection.hpp  ImageData.cpp  ImageData.h  Job.h  Misc.cpp  Misc.h  OptionsManager.cpp  VideoFrameData.cpp  VideoFrameData.h  VideoFrameProcessor.cpp  VideoFrameProcessor.h
Core/ProcessingEngine/: FeatureDB.cpp  FeatureDB.h  FeatureDB.txt  SiftFeatures.cpp  SiftFeatures.h
Core/ProcessingEngine/Demo/: MonoChromeProc.cpp  MonoChromeProc.h
Core/ProcessingEngine/OpenSift/include/: imgfeatures.h  sift.h  utils.h
Core/ProcessingEngine/OpenSift/src/: imgfeatures.cpp  kdtree.cpp  match_num.cpp  minpq.cpp  sift.cpp  utils.cpp  xform.cpp
Core/ThreadManager/: ThreadRunnableTask.cpp  ThreadRunnableTask.h
GUI/: ApplicationStyles.cpp  ApplicationStyles.h  FileLineEdit.cpp  FileLineEdit.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
GUI/VideoPlayer/: Background.cpp  Background.h  CoverWidget.cpp  CoverWidget.h  VideoPlayer.cpp  VideoPlayer.h  VideoWidget.cpp  VideoWidget.h
VideoPlayer/: Background.cpp  CoverWidget.cpp  VideoPlayer.cpp  VideoPlayer.h  VideoWidget.cpp
